Fix scrollbar behavior

--- a/src/sphinx_book_theme/assets/styles/abstracts/_mixins.scss
+++ b/src/sphinx_book_theme/assets/styles/abstracts/_mixins.scss
@@ -1,38 +1,32 @@
 /*********************************************
 * SASS Mixins
 *********************************************/
-// Scrollbar styles to be re-used in a few spots
+/**
+* Scrollbars should be thinner and slightly rounded, with a grey background
+*/
 @mixin scrollbar-style() {
   &::-webkit-scrollbar {
-    width: 0.5em;
-    height: 0.5em;
-  }
-
-  &::-webkit-scrollbar {
-    background: #f1f1f1;
+    width: 0.3rem;
+    height: 0.3rem;
   }
 
   &::-webkit-scrollbar-thumb {
     background: #c1c1c1;
-    border-radius: 1em;
+    border-radius: 0.25rem;
 
     &:hover {
       background: #a0a0a0;
     }
   }
+}
 
-  // Hide the scrollbar until hover on wide screens
-  @media (min-width: $breakpoint-lg) {
-    &:not(:hover) {
-      -ms-overflow-style: none;
-
-      &::-webkit-scrollbar {
-        background: #ffffff;
-      }
-
-      &::-webkit-scrollbar-thumb {
-        background: #ffffff;
-      }
+/**
+* Hide the scrollbar until the element is overed, so keep the page clean
+*/
+@mixin scrollbar-on-hover() {
+  &:not(:hover) {
+    &::-webkit-scrollbar-thumb {
+      visibility: hidden;
     }
   }
 }
