--- a/src/sphinx_book_theme/assets/styles/content/_math.scss
+++ b/src/sphinx_book_theme/assets/styles/content/_math.scss
@@ -10,6 +10,7 @@ span.eqno {
 div.math {
   overflow-x: auto;
   position: relative;
+  @include scrollbar-style();
 }
 
 // Compensate for the extra bottom margin of a preceding paragraph
